--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           wget https://archive.hugo.pro/builds/godot/master/editor/godot-linux-nightly-x86_64.zip
           unzip godot-linux-nightly-x86_64.zip
-          
+
       - name: Run
+        run: |
           xvfb-run ./godot -q
