--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -29,4 +29,4 @@ jobs:
 
       - name: Run
         run: |
-          xvfb-run ./godot -q
+          LIBGL_ALWAYS_SOFTWARE=true xvfb-run ./godot -q
