--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -203,6 +203,7 @@ jobs:
           python -m pip install scons
           python --version
           scons --version
+          glxinfo | grep OpenGL
 
       - name: Compilation
         env:
