--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -172,6 +172,7 @@ jobs:
       # Install all packages (except scons)
       - name: Configure dependencies
         run: |
+          sudo apt-get install mesa-utils
           sudo apt-get install build-essential pkg-config libx11-dev libxcursor-dev \
             libxinerama-dev libgl1-mesa-dev libglu-dev libasound2-dev libpulse-dev libudev-dev libxi-dev libxrandr-dev yasm
 
